# turnstile-browser-lab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: adapters.md  api.md  architecture.md
examples/: client_js.js  client_python.py  sample_requests.http
scripts/: benchmark.py  run_dev.bat  run_dev.sh
src/turnstile_lab/: config.py  logging_conf.py  main.py
src/turnstile_lab/adapters/: base_adapter.py
src/turnstile_lab/adapters/sunarp/: adapter.py  models.py  selectors.py
src/turnstile_lab/api/: app.py  routes_health.py  routes_tasks.py  schemas.py
src/turnstile_lab/core/: browser_pool.py  browser_session.py  cache.py  models.py  task_manager.py
src/turnstile_lab/profiles/: browser_profiles.py  headers.py
src/turnstile_lab/solvers/: base_solver.py  turnstile_solver.py
src/turnstile_lab/storage/: memory_store.py  sqlite_store.py
src/turnstile_lab/utils/: hashes.py  timers.py  validators.py
tests/: test_api.py  test_cache.py  test_profiles.py  test_task_manager.py  test_turnstile_solver.py
