[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turnstile-browser-lab"
version = "0.1.0"
description = "Async browser service for Turnstile solving and site adapters such as SUNARP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "quart",
  "patchright",
  "camoufox[geoip]",
  "requests",
  "aiosqlite",
  "rich"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio"
]

[project.scripts]
turnstile-lab = "turnstile_lab.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["turnstile_lab*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
